k8s/traefik/sample-project-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-project-web
  labels:
    app: sample-project
    component: web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: sample-project
    component: web
