k8s/traefik/sample-project-frontend-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sample-project-ingress
spec:
  entryPoints:
    - web # This is traefik's endpoint
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - name: sample-project-web
          port: 80
